--- a/src/assets/landing_page.scss
+++ b/src/assets/landing_page.scss
@@ -25,7 +25,7 @@
     right: 0;
     bottom: 0;
     min-width: 100%;
-    min-height: 100%;
+    // min-height: 300px;右側會有兩個Y軸
     }
 
     .container#header {
@@ -100,14 +100,13 @@
         margin: 0px;
     }
     section#tools {
-    height: 600px;
     background-color: #efeff0;
     margin-top: 0px;
     }
 
     
     section#tools .powder_box {
-    height: 450px;
+    min-height: 600px;
     }
     section#tools .powder_box:hover img#powder_spoon {
     transform: scale(1.2) translateX(-50%);
@@ -158,7 +157,9 @@
     top: 45%;
     }
 
-
+    section#tools .tea {
+        min-height: 600px;
+    }
 
     section#tools .tea:hover img#brush {
     transform: scale(1.2) translate(-45%, -47%);
@@ -191,6 +192,7 @@
     position: absolute;
 
     }
+   
     section#tools .tea img#tea {
     position: absolute;
     left: 48%;
@@ -216,7 +218,9 @@
 
 
 
-
+    section#tools .cover {
+        min-height: 600px;
+    }
     section#tools .cover:hover img#cover {
     transform: translate(-70%, -50%);
     }
@@ -432,122 +436,124 @@
             display: none;
         }
 
-
-
-        section#tools .powder_box {
-        transform: rotate(270deg) translate(20%,-50%) scale(0.6);
-        top: 50%;
-        left: 40%;
+        section#tools .powder_box, section#tools .tea,section#tools .cover {
+            display: none;
         }
+
+        // section#tools .powder_box {
+        // transform: rotate(270deg) translate(20%,-50%) scale(0.6);
+        // top: 50%;
+        // left: 40%;
+        // }
         
-        section#tools .powder_box .text {
-        top: 0%;
-        left: 50%;
-        transform: rotate(90deg);
-        font-size: 24px;
-        text-align: left;
-        }
-        section#tools .powder_box .text .title {
-        border-bottom: none;
-        font-size: 24px;
-        }
-        section#tools .powder_box .text .intro {
-        display: none;
-        }
-        section#tools .powder_box img#shadow {
-        transform: rotate(90deg) translate(0%,100%);
-        opacity: 0.4;
-        }
+        // section#tools .powder_box .text {
+        // top: 0%;
+        // left: 50%;
+        // transform: rotate(90deg);
+        // font-size: 24px;
+        // text-align: left;
+        // }
+        // section#tools .powder_box .text .title {
+        // border-bottom: none;
+        // font-size: 24px;
+        // }
+        // section#tools .powder_box .text .intro {
+        // display: none;
+        // }
+        // section#tools .powder_box img#shadow {
+        // transform: rotate(90deg) translate(0%,100%);
+        // opacity: 0.4;
+        // }
 
 
 
-        section#tools .tea:hover img#brush {
-        transform: scale(1.2) translate(-45%, -140%);
-        }
-        section#tools .tea .text_top {
-        font-size: 10px;
-        }
-        section#tools .tea .text_top .title {
-        transform: translate(150%,-120%);
-        border-right: none;
-        font-size: 12px;
-        }
-        section#tools .tea .text_top .intro p {
-        display: none;
-        }
-        section#tools .tea img#tea {
-        transform: translate(-50%, -150%);
-        width: 35%;
-        }
-        section#tools .tea img#brush {
-        width: 33%;
-        transform: translate(-50%, -160%);
-        }
-        section#tools .tea img#tea_shadow {
-        opacity: 0.4;
-        transform: translate(-65%, -85%);
-        }
+        // section#tools .tea:hover img#brush {
+        // transform: scale(1.2) translate(-45%, -140%);
+        // }
+        // section#tools .tea .text_top {
+        // font-size: 10px;
+        // }
+        // section#tools .tea .text_top .title {
+        // transform: translate(150%,-120%);
+        // border-right: none;
+        // font-size: 12px;
+        // }
+        // section#tools .tea .text_top .intro p {
+        // display: none;
+        // }
+        // section#tools .tea img#tea {
+        // transform: translate(-50%, -150%);
+        // width: 35%;
+        // }
+        // section#tools .tea img#brush {
+        // width: 33%;
+        // transform: translate(-50%, -160%);
+        // }
+        // section#tools .tea img#tea_shadow {
+        // opacity: 0.4;
+        // transform: translate(-65%, -85%);
+        // }
 
 
         
-        section#tools .cover .text .title {
-        transform: translate(-5%,-20%);
-        border-right: none;
-        }
-        section#tools .cover .text .intro {
-        display: none;
-        }
-        section#tools .cover img#shadow {
-        transform: translate(-68%, -30%);
-        width: 30%;
-        }
-        section#tools .cover img#cover {
-        transform: translate(-55%, -45%);
-        width: 20%;
-        }
-        section#tools .cover img#powder_box {
-        transform: translate(-55%, -45%) rotate(165deg) scale(1.5);
-        width: 13%;
-        }
+        // section#tools .cover .text .title {
+        // transform: translate(-5%,-20%);
+        // border-right: none;
+        // }
+        // section#tools .cover .text .intro {
+        // display: none;
+        // }
+        // section#tools .cover img#shadow {
+        // transform: translate(-68%, -30%);
+        // width: 30%;
+        // }
+        // section#tools .cover img#cover {
+        // transform: translate(-55%, -45%);
+        // width: 20%;
+        // }
+        // section#tools .cover img#powder_box {
+        // transform: translate(-55%, -45%) rotate(165deg) scale(1.5);
+        // width: 13%;
+        // }
 
         section#steps .line {
             display: none;
         }
 
 
-        section#steps .col-md-6.content {
-            padding: 50px;
-        }
-        section#steps .col-md-6.content02 {
-            padding-top: 150px;
-        }
-        section#steps .col-md-6.content h1,h4 {
-            text-align: center;
-        }
-        img#step02 {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%,-300%);
-            z-index: 333;
-        }
-        section#steps .col-md-4.content03, section#steps .col-md-4.content04 {
-            padding: 50px;
-            padding-top: 550px;
-            z-index: 3;
-        }
-        section#steps .col-md-4.content03 h1,h4 {
-            text-align: center;
-        }
+        // section#steps .col-md-6.content {
+        //     padding: 50px;
+        // }
+        // section#steps .col-md-6.content02 {
+        //     padding-top: 150px;
+        // }
+        // section#steps .col-md-6.content h1,h4 {
+        //     text-align: center;
+        // }
+        // img#step02 {
+        //     position: absolute;
+        //     top: 50%;
+        //     left: 50%;
+        //     transform: translate(-50%,-300%);
+        //     z-index: 333;
+        // }
+        // section#steps .col-md-4.content03, section#steps .col-md-4.content04 {
+        //     padding: 50px;
+        //     padding-top: 550px;
+        //     z-index: 3;
+        // }
+        // section#steps .col-md-4.content03 h1,h4 {
+        //     text-align: center;
+        // }
 
-        img#step03 {
-            position: absolute;
-            transform: translate(0%,-30%);
-        }
-        img#cup_step {
-            padding-bottom: 80px;
+        // img#step03 {
+        //     position: absolute;
+        //     transform: translate(0%,-30%);
+        // }
+        // img#cup_step {
+        //     padding-bottom: 80px;
            
-        }
+        // }
 
 
         footer.jumbotron {
