--- a/src/assets/landing_page.scss
+++ b/src/assets/landing_page.scss
@@ -14,6 +14,48 @@
     height: 800px;
     }
     
+    .video-background {
+    background: #000;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -99;
+    box-sizing: border-box;
+    }
+    .video-foreground,
+    .video-background iframe {
+    position: absolute;
+    top: 0;
+    left: -5%;
+    width: 105%;
+    height: 105%;
+    pointer-events: none;
+    box-sizing: border-box;
+    }
+    @media (min-aspect-ratio: 16/9) {
+    .video-foreground {
+        height: 300%;
+        top: -100%;
+    }
+    }
+    @media (max-aspect-ratio: 16/9) {
+    .video-foreground {
+        width: 300%;
+        left: -100%;
+    }
+    }
+    @media all and (max-width: 600px) {
+    .vid-info {
+        width: 50%;
+        padding: 0.5rem;
+    }
+    .vid-info h1 {
+        margin-bottom: 0.2rem;
+    }
+    }
+    
+
     section#tools {
     position: relative;
     }
