src source reset

--- a/src/assets/landing_page.scss
+++ b/src/assets/landing_page.scss
@@ -395,7 +395,7 @@
     footer.jumbotron {
     height: 800px;
     text-align: center;
-    background-image: url("~@/assets/images/landingpageFooter.jpg");
+    background-image: url("https://storage.googleapis.com/vue-course-api.appspot.com/ecommerce_project%2F1612841323024.jpg?GoogleAccessId=firebase-adminsdk-zzty7%40vue-course-api.iam.gserviceaccount.com&Expires=1742169600&Signature=NhO2IzC5WNfppcpp30fVjoExnKR1bAM6rQYAkpMH4%2BtxNqBllaXAobM9nRpKULYRltLiZOz1vvt23xbPEmoUi5RmGvsKELR9hdf5xPg5SkPggkCyHYEwMeGt4AGVb2Og22%2F2YoUwI2RzxA61jVU3kEWYawZgt3uSH3Gk9%2BGFQdpImb5lKD%2BnCsd3fSvl9ikmUKntbvhmVQ2su2RBPUgaeVvB2YzqHlbWznkaReFYgZMz0kX3zXkBUlJY5iRW7kvmV5ZELjljDAQbKXa%2B6jy39ZkLL%2FltE1WRrVCb%2FqNnHdgFFwqfA2J6e1%2BjU3iemT7dCdbVNHVL40KXqW1im6Tq3w%3D%3D");
     background-size: cover;
     background-attachment: fixed;
     position: relative;
